--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Intersect</string>
+    <string name="mainIntro">欢迎来到游戏世界</string>
+    <string name="btn_Character">人物</string>
+    <string name="btn_Quest">任务</string>
 </resources>
